Fix align in IE

--- a/public/styles.css
+++ b/public/styles.css
@@ -17,11 +17,17 @@
 }
 
 #slider{
+    display: grid;
     grid-area: slider;
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: repeat(4,1fr);
 }
 
 #about{
+    display: grid;
     grid-area: about;
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: repeat(2,1fr);
 }
 
 .Header{
@@ -91,6 +97,11 @@
     display: inline-block;
     margin-top: 20px;
     letter-spacing: 1rem;
+    transition: transform .2s ease;
+}
+
+.Slider__Copy > a:hover {
+    transform: scale(1.1);
 }
 
 .Slider__Copy svg {
@@ -99,7 +110,7 @@
 
 .Slider__Actions{
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     grid-column: 5 / 6;
 }
 
